[package]
name = "leetcode-scaffold"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
# for async fetch leetcode problem
scraper = "0.23.1"
reqwest = "0.12.15"
mockito = "1.7.0"
tokio = { version = "1.44.1", features = ["rt-multi-thread", "rt", "macros"] }
# randomized algorithm
rand = "0.9.0"
